// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUpload matches snapshot: enzyme.mount 1`] = `
<FileUpload
  acceptedFormats={null}
  errorText={null}
  hintText={null}
>
  <glamorous(label)
    errorText={null}
  >
    <label
      className="css-1dyhx6n"
    >
      <glamorous(span)
        errorText={null}
      >
        <span
          className="css-1m1nyko"
        >
          example
        </span>
      </glamorous(span)>
      <glamorous(span)>
        <span
          className="css-1k9f6xb"
        />
      </glamorous(span)>
      <glamorous(span)>
        <span
          className="css-110ebyw"
        />
      </glamorous(span)>
      <glamorous(input)
        accept={null}
        errorText={null}
        type="file"
      >
        <input
          accept={null}
          className="css-svb7gc"
          type="file"
        />
      </glamorous(input)>
    </label>
  </glamorous(label)>
</FileUpload>
`;

exports[`FileUpload matches snapshot: enzyme.render 1`] = `
<label
  class="css-1dyhx6n"
>
  <span
    class="css-1m1nyko"
  >
    example
  </span>
  <span
    class="css-1k9f6xb"
  />
  <span
    class="css-110ebyw"
  />
  <input
    class="css-svb7gc"
    type="file"
  />
</label>
`;

exports[`FileUpload matches snapshot: enzyme.shallow 1`] = `
<glamorous(label)
  errorText={null}
>
  <glamorous(span)
    errorText={null}
  >
    example
  </glamorous(span)>
  <glamorous(span) />
  <glamorous(span) />
  <glamorous(input)
    accept={null}
    errorText={null}
    type="file"
  />
</glamorous(label)>
`;
